Add Connect Wallet

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
     <script src="/js/bignumber.min.js"></script>
     <script src="/js/setup.js"></script>
 
+    <script src="/js/walletconnect.js"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
