--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@900&display=swap');
+    </style>
     <title>DYP AVAX dApp</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <!-- <link rel="stylesheet" href="/css/bootstrap.min.css" /> -->
