--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content=" BSCStaking DAPP"
+      content=" AVAXStaking DAPP"
     />
+
+    <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv='expires' content='0'>
+    <meta http-equiv='pragma' content='no-cache'>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
